# Pulse

./: .editorconfig  .gitignore  CHANGELOG.md  CNAME.template  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_WEBSITE.md  FIRST_RELEASE_CHECKLIST.md  GITHUB_PAGES_QUICK.md  LICENSE  OPEN_SOURCE_SETUP.md  QUICKSTART.md  README.md  RELEASE_READY.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  script.js  server.js  style.css  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
app/: index.html
docs/: APP_BEHAVIOR.md  BUG_REPORT_TEMPLATE.md  GITHUB_ACTIONS_RELEASE.md  GITHUB_PAGES_DEPLOYMENT.md  INDEX.md  PLATFORM_TESTING.md  QA_CHECKLIST.md  QA_REPORT.md  QUICK_START_UPDATES.md  RELEASE_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS_2026-02-27.md  WINDOWS_BUILD_GUIDE.md
e2e/: README.md  comprehensive.spec.ts  example.spec.ts  export.spec.ts  search.spec.ts  settings.spec.ts  tauri-global-setup.ts  tauri-import.spec.ts  tauri.spec.ts  testing-guide.spec.ts  user-flow.spec.ts  with-files.spec.ts
public/: script.js
scripts/: flatten-dist.js  generate-test-audio.mjs  generate-test-manifest.js  release.ps1  vite-crypto-polyfill.js
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: aubiotrack-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bpm_detection.rs  key_detection.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
(+38 files in other folders)
