[package]
name = "clean-track-buddy"
version = "1.0.8"
description = "Audio Sample Cleaner"
authors = ["gerigazda0"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clean_track_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "wav", "ogg"] }
rustfft = "6"
